# BIM-CDE-1

./: .gitignore  docker-compose.yml
derivative/: package.json  tsconfig.json
derivative/src/: server.ts  test.ts
derivative/src/config/: AWS3.ts  env.ts
derivative/src/model/: index.ts
derivative/src/model/parser/: IfcCategoryMap.ts  IfcGeometryJson.ts  IfcWorker.ts  ParserManager.ts  index.ts  types.ts
derivative/src/model/parser/IfcGeometryTiler/: index.ts
derivative/src/model/parser/IfcPropertiesTiler/: index.ts
derivative/src/model/parser/IfcRelationsIndexer/: index.ts
property/: package.json  tsconfig.json
property/src/: server.ts
property/src/config/: env.ts
property/src/model/: index.ts  properties.ts
rust-property/: Cargo.toml  MakeFile.toml
rust-property/src/: main.rs
server-tiles/: .env.example  package.json
server-tiles/drizzle/: 0000_empty_leopardon.sql
server-tiles/drizzle/meta/: 0000_snapshot.json  _journal.json
server-tiles/src/: server.ts
server-tiles/src/config/: AWS3.ts  env.ts
server-tiles/src/controller/: ModelController.ts  ProjectController.ts
server-tiles/src/db/: index.ts
server-tiles/src/db/schema/: bcf.ts  models.ts  projects.ts
server-tiles/src/socket/: index.ts
website/: .env.example  package.json
website/src/api/: core.ts  project.ts
website/src/bim/: BimModel.ts
website/src/bim/signals/: index.ts  project.ts  tree.ts
website/src/bim/types/: model-tree.ts
website/src/layout/private/: index.tsx
website/src/pages/viewer/: BimViewer.tsx  ProjectViewer.tsx
(+25 files in other folders)
