[package]
name = "rust-property"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-cors = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "3.2.1"
dotenv = "0.15"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
